--- a/Laboratory/Views/EquipmentInfo/EquipmentInfoView.xib
+++ b/Laboratory/Views/EquipmentInfo/EquipmentInfoView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -13,57 +13,89 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="c5y-RN-dVf" customClass="EquipmentInfoView" customModule="Laboratory" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ufZ-Tb-bDG" userLabel="Stack View 1">
-                    <rect key="frame" x="10" y="52" width="355" height="343"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ufZ-Tb-bDG">
+                    <rect key="frame" x="20" y="28" width="374" height="358"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Available:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rS8-1g-o88">
-                            <rect key="frame" x="0.0" y="0.0" width="355" height="20.333333333333332"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5B-nS-CIn">
-                            <rect key="frame" x="0.0" y="28.333333333333329" width="355" height="20.333333333333329"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yg-6n-gAX">
-                            <rect key="frame" x="0.0" y="56.666666666666679" width="355" height="20.333333333333336"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kRb-gL-WFs">
-                            <rect key="frame" x="0.0" y="85" width="355" height="46"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7DX-Gq-cPz">
+                            <rect key="frame" x="0.0" y="0.0" width="228" height="30"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AVAILABLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rS8-1g-o88">
+                                    <rect key="frame" x="0.0" y="6.3333333333333357" width="110" height="17.333333333333332"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="110" id="TC9-EQ-tpK"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
+                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iie-LC-8VS">
+                                    <rect key="frame" x="118" y="0.0" width="60" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="60" id="4EF-VH-kbA"/>
+                                    </constraints>
+                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="items" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AGm-To-MNz">
+                                    <rect key="frame" x="186" y="5" width="42" height="20.333333333333332"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Lorem ipsum dolor sit er elit lamet" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="M1V-Fj-6mu">
+                            <rect key="frame" x="0.0" y="38" width="374" height="128"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="46" id="pxi-Om-rfs"/>
-                            </constraints>
-                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vru-Gd-QKb">
-                            <rect key="frame" x="0.0" y="139" width="355" height="20.333333333333343"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NAME" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5B-nS-CIn">
+                            <rect key="frame" x="0.0" y="174" width="41" height="17.333333333333343"/>
+                            <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kRb-gL-WFs">
+                            <rect key="frame" x="0.0" y="199.33333333333334" width="374" height="50"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        </textView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOCATION" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yg-6n-gAX">
+                            <rect key="frame" x="0.0" y="257.33333333333331" width="76.333333333333329" height="17.333333333333314"/>
+                            <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0S7-UN-qNw">
-                            <rect key="frame" x="0.0" y="167.33333333333337" width="355" height="175.66666666666663"/>
+                            <rect key="frame" x="0.0" y="282.66666666666669" width="374" height="50"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DESCRIPTION" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vru-Gd-QKb">
+                            <rect key="frame" x="0.0" y="340.66666666666669" width="93.666666666666671" height="17.333333333333314"/>
+                            <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="M1V-Fj-6mu" secondAttribute="trailing" id="E4x-Yv-TbN"/>
+                        <constraint firstItem="kRb-gL-WFs" firstAttribute="leading" secondItem="ufZ-Tb-bDG" secondAttribute="leading" id="Nak-iS-peR"/>
+                        <constraint firstItem="M1V-Fj-6mu" firstAttribute="leading" secondItem="ufZ-Tb-bDG" secondAttribute="leading" id="R7l-QW-Kgk"/>
+                        <constraint firstItem="0S7-UN-qNw" firstAttribute="leading" secondItem="ufZ-Tb-bDG" secondAttribute="leading" id="hkQ-hH-gzn"/>
+                        <constraint firstAttribute="trailing" secondItem="0S7-UN-qNw" secondAttribute="trailing" id="qVs-N0-ubw"/>
+                        <constraint firstAttribute="trailing" secondItem="kRb-gL-WFs" secondAttribute="trailing" id="ssC-Jb-Xfa"/>
+                    </constraints>
                 </stackView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RMK-SQ-knl">
-                    <rect key="frame" x="0.0" y="403" width="375" height="375"/>
+                    <rect key="frame" x="0.0" y="394" width="414" height="414"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="RMK-SQ-knl" secondAttribute="height" multiplier="1:1" id="qae-6O-ROP"/>
                     </constraints>
@@ -72,22 +104,22 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="ufZ-Tb-bDG" firstAttribute="top" secondItem="SxJ-5z-LwO" secondAttribute="top" constant="8" id="LwH-ql-XMu"/>
-                <constraint firstItem="ufZ-Tb-bDG" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" constant="10" id="Twm-w0-RfE"/>
+                <constraint firstItem="ufZ-Tb-bDG" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" constant="20" id="Twm-w0-RfE"/>
                 <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="RMK-SQ-knl" secondAttribute="trailing" id="afH-GI-gVb"/>
-                <constraint firstItem="SxJ-5z-LwO" firstAttribute="bottom" secondItem="RMK-SQ-knl" secondAttribute="bottom" id="dIJ-kg-62B"/>
-                <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="ufZ-Tb-bDG" secondAttribute="trailing" constant="10" id="h89-o6-ibQ"/>
+                <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="ufZ-Tb-bDG" secondAttribute="trailing" constant="20" id="h89-o6-ibQ"/>
                 <constraint firstItem="RMK-SQ-knl" firstAttribute="top" secondItem="ufZ-Tb-bDG" secondAttribute="bottom" constant="8" id="mMV-nJ-pjo"/>
                 <constraint firstItem="RMK-SQ-knl" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" id="wit-zC-IJ3"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="SxJ-5z-LwO"/>
             <connections>
-                <outlet property="availableLabel" destination="rS8-1g-o88" id="1jF-hZ-xeo"/>
+                <outlet property="availableTextField" destination="iie-LC-8VS" id="Xe0-Nx-fqZ"/>
                 <outlet property="descriptionTextView" destination="0S7-UN-qNw" id="Dss-rN-tIJ"/>
                 <outlet property="equipmentImageView" destination="RMK-SQ-knl" id="k2R-Hc-fnJ"/>
+                <outlet property="itemsLabel" destination="AGm-To-MNz" id="JAh-1X-3yu"/>
                 <outlet property="locationTextView" destination="kRb-gL-WFs" id="yw1-yk-JTv"/>
-                <outlet property="nameLabel" destination="O5B-nS-CIn" id="rQE-UB-X1O"/>
+                <outlet property="nameTextView" destination="M1V-Fj-6mu" id="GA3-Zr-jkU"/>
             </connections>
-            <point key="canvasLocation" x="926.08695652173924" y="170.75892857142856"/>
+            <point key="canvasLocation" x="926.08695652173924" y="170.38043478260872"/>
         </view>
     </objects>
 </document>
