attempt make equipmentInfo scrollable

--- a/Laboratory/Storyboards/Base.lproj/Main.storyboard
+++ b/Laboratory/Storyboards/Base.lproj/Main.storyboard
@@ -350,22 +350,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZBh-ax-Bds">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IKp-HI-N1F">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qSM-TM-uvH">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="qSM-TM-uvH" firstAttribute="height" secondItem="IKp-HI-N1F" secondAttribute="height" id="42H-rc-uny"/>
+                                    <constraint firstAttribute="trailing" secondItem="qSM-TM-uvH" secondAttribute="trailing" id="KB0-VG-PNs"/>
+                                    <constraint firstItem="qSM-TM-uvH" firstAttribute="top" secondItem="IKp-HI-N1F" secondAttribute="top" id="TR9-EI-COd"/>
+                                    <constraint firstItem="qSM-TM-uvH" firstAttribute="width" secondItem="IKp-HI-N1F" secondAttribute="width" id="Yp6-aC-9fg"/>
+                                    <constraint firstItem="qSM-TM-uvH" firstAttribute="leading" secondItem="IKp-HI-N1F" secondAttribute="leading" id="djw-RJ-AD0"/>
+                                    <constraint firstAttribute="bottom" secondItem="qSM-TM-uvH" secondAttribute="bottom" id="uog-6P-EV8"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Zxb-0j-AIi" firstAttribute="trailing" secondItem="ZBh-ax-Bds" secondAttribute="trailing" id="FVQ-Pw-sd9"/>
-                            <constraint firstItem="Zxb-0j-AIi" firstAttribute="bottom" secondItem="ZBh-ax-Bds" secondAttribute="bottom" id="J8n-Qj-dzA"/>
-                            <constraint firstItem="ZBh-ax-Bds" firstAttribute="leading" secondItem="Zxb-0j-AIi" secondAttribute="leading" id="ogd-gI-p6c"/>
-                            <constraint firstItem="ZBh-ax-Bds" firstAttribute="top" secondItem="Zxb-0j-AIi" secondAttribute="top" id="zNT-XO-nxh"/>
+                            <constraint firstItem="Zxb-0j-AIi" firstAttribute="trailing" secondItem="IKp-HI-N1F" secondAttribute="trailing" id="UWu-Pm-U9V"/>
+                            <constraint firstItem="IKp-HI-N1F" firstAttribute="leading" secondItem="Zxb-0j-AIi" secondAttribute="leading" id="rpG-7Q-siu"/>
+                            <constraint firstItem="Zxb-0j-AIi" firstAttribute="bottom" secondItem="IKp-HI-N1F" secondAttribute="bottom" id="szd-pZ-IEs"/>
+                            <constraint firstItem="IKp-HI-N1F" firstAttribute="top" secondItem="Zxb-0j-AIi" secondAttribute="top" id="zhx-Cc-dB8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Zxb-0j-AIi"/>
                     </view>
                     <connections>
-                        <outlet property="mainView" destination="ZBh-ax-Bds" id="eVr-5I-VIf"/>
+                        <outlet property="mainView" destination="qSM-TM-uvH" id="Jrq-A9-CUJ"/>
+                        <outlet property="scrollView" destination="IKp-HI-N1F" id="MgJ-sz-CMT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mq0-5F-6qY" userLabel="First Responder" sceneMemberID="firstResponder"/>
