--- a/Laboratory/Views/EquipmentInfo/EquipmentInfoView.xib
+++ b/Laboratory/Views/EquipmentInfo/EquipmentInfoView.xib
@@ -13,7 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="c5y-RN-dVf" customClass="EquipmentInfoView" customModule="Laboratory" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="873"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ufZ-Tb-bDG">
@@ -100,18 +100,30 @@
                         <constraint firstAttribute="width" secondItem="RMK-SQ-knl" secondAttribute="height" multiplier="1:1" id="qae-6O-ROP"/>
                     </constraints>
                 </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nri-LI-CSL">
+                    <rect key="frame" x="0.0" y="816" width="414" height="36"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="1Wb-EH-hgE"/>
+                    </constraints>
+                    <state key="normal" title="Add Image"/>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="Nri-LI-CSL" firstAttribute="top" secondItem="RMK-SQ-knl" secondAttribute="bottom" constant="8" id="7Lw-94-LdC"/>
+                <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="Nri-LI-CSL" secondAttribute="trailing" id="Ahz-Bw-Ecl"/>
                 <constraint firstItem="ufZ-Tb-bDG" firstAttribute="top" secondItem="SxJ-5z-LwO" secondAttribute="top" constant="8" id="LwH-ql-XMu"/>
                 <constraint firstItem="ufZ-Tb-bDG" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" constant="20" id="Twm-w0-RfE"/>
                 <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="RMK-SQ-knl" secondAttribute="trailing" id="afH-GI-gVb"/>
                 <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="ufZ-Tb-bDG" secondAttribute="trailing" constant="20" id="h89-o6-ibQ"/>
+                <constraint firstItem="Nri-LI-CSL" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" id="lfl-aU-hSe"/>
                 <constraint firstItem="RMK-SQ-knl" firstAttribute="top" secondItem="ufZ-Tb-bDG" secondAttribute="bottom" constant="8" id="mMV-nJ-pjo"/>
                 <constraint firstItem="RMK-SQ-knl" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" id="wit-zC-IJ3"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="SxJ-5z-LwO"/>
             <connections>
+                <outlet property="addImageButton" destination="Nri-LI-CSL" id="zPF-DQ-E9L"/>
                 <outlet property="availableTextField" destination="iie-LC-8VS" id="Xe0-Nx-fqZ"/>
                 <outlet property="descriptionTextView" destination="0S7-UN-qNw" id="Dss-rN-tIJ"/>
                 <outlet property="equipmentImageView" destination="RMK-SQ-knl" id="k2R-Hc-fnJ"/>
@@ -119,7 +131,7 @@
                 <outlet property="locationTextView" destination="kRb-gL-WFs" id="yw1-yk-JTv"/>
                 <outlet property="nameTextView" destination="M1V-Fj-6mu" id="GA3-Zr-jkU"/>
             </connections>
-            <point key="canvasLocation" x="926.08695652173924" y="170.38043478260872"/>
+            <point key="canvasLocation" x="926.08695652173924" y="225.40760869565219"/>
         </view>
     </objects>
 </document>
