--- a/Laboratory/Views/EquipmentInfo/EquipmentInfoView.xib
+++ b/Laboratory/Views/EquipmentInfo/EquipmentInfoView.xib
@@ -13,11 +13,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="c5y-RN-dVf" customClass="EquipmentInfoView" customModule="Laboratory" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="873"/>
+            <rect key="frame" x="0.0" y="0.0" width="421" height="951"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ufZ-Tb-bDG">
-                    <rect key="frame" x="20" y="28" width="374" height="358"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="ufZ-Tb-bDG">
+                    <rect key="frame" x="20" y="28" width="381" height="334"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7DX-Gq-cPz">
                             <rect key="frame" x="0.0" y="0.0" width="228" height="30"/>
@@ -48,37 +48,37 @@
                             </subviews>
                         </stackView>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="M1V-Fj-6mu">
-                            <rect key="frame" x="0.0" y="38" width="374" height="128"/>
+                            <rect key="frame" x="0.0" y="34" width="381" height="128"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NAME" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5B-nS-CIn">
-                            <rect key="frame" x="0.0" y="174" width="41" height="17.333333333333343"/>
+                            <rect key="frame" x="0.0" y="166" width="41" height="17.333333333333343"/>
                             <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kRb-gL-WFs">
-                            <rect key="frame" x="0.0" y="199.33333333333334" width="374" height="50"/>
+                            <rect key="frame" x="0.0" y="187.33333333333334" width="381" height="50"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOCATION" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yg-6n-gAX">
-                            <rect key="frame" x="0.0" y="257.33333333333331" width="76.333333333333329" height="17.333333333333314"/>
+                            <rect key="frame" x="0.0" y="241.33333333333331" width="76.333333333333329" height="17.333333333333314"/>
                             <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0S7-UN-qNw">
-                            <rect key="frame" x="0.0" y="282.66666666666669" width="374" height="50"/>
+                            <rect key="frame" x="0.0" y="262.66666666666669" width="381" height="50"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DESCRIPTION" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vru-Gd-QKb">
-                            <rect key="frame" x="0.0" y="340.66666666666669" width="93.666666666666671" height="17.333333333333314"/>
+                            <rect key="frame" x="0.0" y="316.66666666666669" width="93.666666666666671" height="17.333333333333314"/>
                             <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -94,29 +94,41 @@
                     </constraints>
                 </stackView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RMK-SQ-knl">
-                    <rect key="frame" x="0.0" y="394" width="414" height="414"/>
+                    <rect key="frame" x="0.0" y="370" width="421" height="421"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="RMK-SQ-knl" secondAttribute="height" multiplier="1:1" id="qae-6O-ROP"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nri-LI-CSL">
-                    <rect key="frame" x="0.0" y="816" width="414" height="36"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="36" id="1Wb-EH-hgE"/>
-                    </constraints>
-                    <state key="normal" title="Edit Image"/>
-                </button>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sUd-nP-1ia">
+                    <rect key="frame" x="0.0" y="799" width="421" height="72"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nri-LI-CSL">
+                            <rect key="frame" x="0.0" y="0.0" width="421" height="36"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="36" id="1Wb-EH-hgE"/>
+                            </constraints>
+                            <state key="normal" title="Edit Image"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7LQ-g7-Vuz">
+                            <rect key="frame" x="0.0" y="36" width="421" height="36"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="36" id="f0i-oI-8Zw"/>
+                            </constraints>
+                            <state key="normal" title="👥 Who is using"/>
+                        </button>
+                    </subviews>
+                </stackView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Nri-LI-CSL" firstAttribute="top" secondItem="RMK-SQ-knl" secondAttribute="bottom" constant="8" id="7Lw-94-LdC"/>
-                <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="Nri-LI-CSL" secondAttribute="trailing" id="Ahz-Bw-Ecl"/>
+                <constraint firstItem="sUd-nP-1ia" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" id="7NY-oC-zac"/>
                 <constraint firstItem="ufZ-Tb-bDG" firstAttribute="top" secondItem="SxJ-5z-LwO" secondAttribute="top" constant="8" id="LwH-ql-XMu"/>
                 <constraint firstItem="ufZ-Tb-bDG" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" constant="20" id="Twm-w0-RfE"/>
                 <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="RMK-SQ-knl" secondAttribute="trailing" id="afH-GI-gVb"/>
                 <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="ufZ-Tb-bDG" secondAttribute="trailing" constant="20" id="h89-o6-ibQ"/>
-                <constraint firstItem="Nri-LI-CSL" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" id="lfl-aU-hSe"/>
+                <constraint firstItem="sUd-nP-1ia" firstAttribute="top" secondItem="RMK-SQ-knl" secondAttribute="bottom" constant="8" id="l1K-3u-pVe"/>
                 <constraint firstItem="RMK-SQ-knl" firstAttribute="top" secondItem="ufZ-Tb-bDG" secondAttribute="bottom" constant="8" id="mMV-nJ-pjo"/>
+                <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="sUd-nP-1ia" secondAttribute="trailing" id="myy-BF-S4f"/>
                 <constraint firstItem="RMK-SQ-knl" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" id="wit-zC-IJ3"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -129,8 +141,9 @@
                 <outlet property="itemsLabel" destination="AGm-To-MNz" id="JAh-1X-3yu"/>
                 <outlet property="locationTextView" destination="kRb-gL-WFs" id="yw1-yk-JTv"/>
                 <outlet property="nameTextView" destination="M1V-Fj-6mu" id="GA3-Zr-jkU"/>
+                <outlet property="whoIsUsingButton" destination="7LQ-g7-Vuz" id="wbd-xc-4su"/>
             </connections>
-            <point key="canvasLocation" x="926.08695652173924" y="225.40760869565219"/>
+            <point key="canvasLocation" x="931.15942028985512" y="257.20108695652175"/>
         </view>
     </objects>
 </document>
